# rust_sandbox

./: .gitignore  Cargo.toml  README.md  index.html
.sqlx/: query-34abedce1af7cef4462c90f82d86c506b945f7bc579adb7cd06002eac84520db.json  query-51fc1dcc2a9b52c7fc4d76ea0fbb8eab5b68041324c1474efce48fb86a9148f3.json  query-8586103b46b3007973c45e78069e3f32f85855298a455f1ad59c4cc863aec364.json
ai/: Cargo.toml
ai/src/: lib.rs
api/: Cargo.toml
api/src/: lib.rs
assets/: sandbox.db  sqlx.txt  words.json
assets/migrations/: 20230716_00_create_todos_table.sql
assets/vultus/: a.txt  b.txt  c.txt
benches/: benchmark.rs
betterjson/: Cargo.toml  sample.json
betterjson/src/: lex.rs  lib.rs  parse.rs
betterjson/tests/: libtest.rs
calc/src/: eval.rs  lib.rs  parse.rs  prompt.rs
chatgpt/: Cargo.toml
dbdb/: Cargo.toml
dbdb/src/: lib.rs
fraction/src/: lib.rs
game_of_life/: Cargo.toml
game_of_life/benches/: benchmark.rs
game_of_life/src/: game_of_life.rs  game_of_life_vec.rs  game_of_life_vec_1d.rs
graph/src/: algorithm.rs  lib.rs  planning.rs  query.rs
kilors/: Cargo.toml  build.sh  kilo.c
kilors/src/: lib.rs
kv1/: Cargo.toml
kv1/src/: lib.rs
lang/: Cargo.toml  c_bnf.txt
lang/src/: ast_lowering.rs  codegen.rs  eval.rs  lex.rs  lib.rs  parse.rs  prompt.rs  semantic.rs
lang/tests/: lex_tests.rs  libtest.rs  libtests.rs  parse_tests.rs
libpngrs/: Cargo.toml  build.sh  test.sh
libpngrs/lib/: libpng16.so.16.40.0
libpngrs/lpng1640/: test-driver
life/: Cargo.toml
life/benches/: benchmark.rs
life/src/: lib.rs  life.rs  life_bitvec.rs  life_vec1d.rs  life_vec2d.rs
lifeui/: Cargo.toml  README.md  index.html
lifeui/src/: lib.rs
loc/: Cargo.toml
loc/src/: lib.rs
marker_invariants/: Cargo.toml
marker_invariants/src/: lib.rs
nes/src/: bus.rs  cpu.rs  lib.rs
oxidize/: Cargo.toml  main  main.c  run.sh
oxidize/src/: lib.rs
padlock/: Cargo.toml
padlock/src/: lex.rs  lib.rs  parse.rs  prompt.rs
random_words/: Cargo.toml
random_words/src/: lib.rs
run/: Cargo.toml
run/src/: main.rs
sat/: Cargo.toml
sat/src/: lib.rs
sc/: Cargo.toml
sc/src/: eval.rs  lex.rs  lib.rs  parse.rs  prompt.rs
spice/src/: circuit.rs  error.rs
src/: chatgpt.rs  fraction.rs  game_of_life.rs  game_of_life_stack.rs  lang.rs  lib.rs  main.rs  marker_invariants.rs  observe.rs  random_words.rs  reactive.rs  sat.rs  static_assert.rs  threadpool.rs  util.rs
src/api/: mod.rs
src/game_of_life/: game_of_life_bitvec.rs  game_of_life_stack.rs  game_of_life_vec.rs  game_of_life_vec_1d.rs  mod.rs
src/graph/: adjacency_list.rs  algorithm.rs  binary_grid.rs  graph.rs  jugfill.rs  mod.rs  path.rs  query.rs
src/nes/: bus.rs  cpu.rs  hardware.rs  mem.rs  mod.rs
src/spice/: circuit.rs  component.rs  error.rs  mod.rs
src/sura/: mod.rs
src/symrs/: expr.rs  macros.rs  mod.rs  xform.rs
src/ui/: chatgpt_grid.rs  grid.rs  mod.rs  simple_egui.rs  todo.rs
src/vultus/: mod.rs
src/yavd/: mod.rs  params.rs
static_assert/: Cargo.toml
sura/: Cargo.toml
sura/src/: lib.rs
symrs/src/: expr.rs  lib.rs  xform.rs
tests/: test.rs
threadpool/src/: lib.rs
tinylisp/: Cargo.toml
tinylisp/src/: eval.rs  lex.rs  lib.rs  parse.rs
ui/: Cargo.toml
ui/src/: chatgpt_grid.rs  flow.rs  grid.rs  kludge.rs  lib.rs  todo.rs
utils/: Cargo.toml
utils/src/: lib.rs
validation/src/: lib.rs
vultus/: Cargo.toml
yavd/: Cargo.toml
(+137 files in other folders)
