[workspace]
resolver = "2"
members = [
    "ai",
    "api",
    "betterjson",
    "calc",
    "chatgpt",
    "fraction",
    "kilors",
    "libpngrs",
    "life",
    "lifeui",
    "graph",
    "lang",
    "loc",
    "marker_invariants",
    "nes",
    "oxidize",
    "padlock",
    "random_words",
    "run",
    "sat",
    "spice",
    "static_assert",
    "sura",
    "symrs",
    "threadpool",
    "tinylisp",
    "ui",
    "utils",
    "validation",
    "vultus",
    "yavd",
]
