[workspace]
resolver = "2"
members = [
    "ai",
    "api",
    "betterjson",
    "calc",
    "chatgpt",
    "fraction",
    "graph",
    "kilors",
    "kv1",
    "libpngrs",
    "life",
    "lifeui",
    "lang",
    "loc",
    "marker_invariants",
    "nes",
    "oxidize",
    "padlock",
    "random_words",
    "run",
    "sat",
    "sc",
    "spice",
    "static_assert",
    "sura",
    "symrs",
    "threadpool",
    "tinylisp",
    "ui",
    "utils",
    "validation",
    "vultus",
    "yavd",
]
