[package]
name = "game_of_life"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = { version = "1" }
rayon = { version = "1" }

[dev-dependencies]
criterion = { version = "*", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false
