[package]
name = "lifeui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
life = { path = "../life" }
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0" }

wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
    'CanvasRenderingContext2d',
    'HtmlCanvasElement',
] }
